Bug 839501 - Baseline compile remaining missing opcodes, r=djvj.